--- a/Home.css
+++ b/Home.css
@@ -1,6 +1,7 @@
 body {
     margin: 0% 10% 0% 10%;
     background-color: #696969;
+    
 }
 
 *{
@@ -70,10 +71,6 @@ header {
     margin: -60px 0px 0px 12px;
 }
 
-.container-fluid {
-    margin-right: -94% ;
-}
-
 .navbar-dark bg-dark {
     background-color: white;
 }
@@ -88,4 +85,6 @@ header {
 
 .navbar-toggler{
     background-color: #1C1C1C!important;
+    margin-left: 96%;
+    
 }
